# docxtplrs

./: .gitignore  Cargo.toml  README.md  build.sh  demo_output.docx  pyproject.toml
example_run/: README.md  create_template.py  data.json  output.docx  run.py  template.docx
examples/: advanced_example.py  basic_example.py  demo.py  demo1.py  output.docx  output_fixed.docx  output_test.docx  template.docx
python/docxtplrs/: __init__.py  __init__.pyi
src/: image.rs  jinja_env.rs  lib.rs  richtext.rs  subdoc.rs  template.rs  template_fix.rs  types.rs  xml_utils.rs
tests/: test_basic.py
