[package]
name = "docxtplrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of python-docx-template with Python bindings"
license = "MIT"
repository = "https://github.com/yourusername/docxtplrs"
keywords = ["docx", "template", "jinja2", "word", "document"]
categories = ["text-processing", "office"]
rust-version = "1.70"

[lib]
name = "docxtplrs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39", "py-clone", "auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "8.2", default-features = false, features = ["deflate", "time"] }
quick-xml = { version = "0.39", features = ["serialize"] }
minijinja = { version = "2.17", features = ["builtins", "json"] }
regex = "1.11"
thiserror = "2.0"
chrono = "0.4"
indexmap = "2.7"
once_cell = "1.20"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
